Mostly Working Account Edit

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -279,7 +279,7 @@ h1, h2, h3, h4, h5 {
 	width: 306px !important;
 	border-radius: 5px !important;
 	padding: 0px 15px 0px 15px !important;
-	margin: 15px auto 0 auto;
+	margin: 25px auto 0 auto !important;
 	font-size: 1.2rem !important;
 	line-height: 1 !important;
 	height: 50px !important;
