Contact us Form

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -325,6 +325,7 @@ h1, h2, h3, h4, h5 {
 .light-section {
 	background-color: #D0D3D4;
 	padding-top: 30px;
+	margin-bottom: 30px;
 }
 
 .light-section a {
