--- a/views/home.html
+++ b/views/home.html
@@ -204,17 +204,87 @@
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <div id='powered'>
-                <h4>Powered by</h4>
-                <a href="http://hacksu.cs.kent.edu/" target="_blank"><img src="img/Hacksu_Color.svg" id="hacksu"></a>
-                <a href="http://mlh.io" target="_blank"><img src="/img/mlh-logo.svg" alt="MLH" id="mlh-logo"></a>
-
-            </div>
-        </div>
     </div>
-
 </div>
+
+<div class="row white fade">
+    <div class="small-12 columns">
+      <div class="row">
+        <div class="small-12 columns">
+          <h2>CONTACT</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 large-6 columns">
+          <p>
+            If you have any questions, concerns, or problems, please do not hesitate to contact us. One of our organizers will get back to you as soon as humanly possible.
+          </p>
+          <p>
+            For questions regarding travel reimbursement, please leave your name, where you are traveling from, and tell us a little bit about yourself.
+          </p>
+        </div>
+        <div class="small-12 large-6 columns">
+          <form ng-submit="home.contact.submit()">
+            <div class="row">
+              <div class="small-12 columns">
+                <p ng-repeat="message in home.contact.errors">{{message}}</p>
+                <p ng-repeat="message in home.contact.successes">{{message}}</p>
+              </div>
+            </div>
+            <!-- Subject -->
+            <div class="row">
+              <div class="small-12 columns">
+                <label class="white">
+                  Subject
+                  <input type="text" placeholder="Travel Reimbursement" ng-model="home.contact.new.subject">
+                </label>
+              </div>
+            </div>
+            <!-- Name -->
+            <div class="row">
+              <div class="small-12 columns">
+                <label class="white">
+                  Name
+                  <input type="text" placeholder="John Doe" ng-model="home.contact.new.name">
+                </label>
+              </div>
+            </div>
+            <!-- Reply to -->
+            <div class="row">
+              <div class="small-12 columns">
+                <label class="white">
+                  Email
+                  <input type="email" placeholder="name@example.com" ng-model="home.contact.new.replyTo">
+                </label>
+              </div>
+            </div>
+            <!-- Body -->
+            <div class="row">
+              <div class="small-12 columns">
+                <label class="white">
+                  Body
+                  <textarea rows="6" placeholder="What's up?" ng-model="home.contact.new.body"></textarea>
+                </label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="small-12 columns">
+                <div class="btn" ng-click="home.contact.submit()">Send</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  <div class="footer">
+      <div id='powered'>
+          <h4>Powered by</h4>
+          <a href="http://hacksu.cs.kent.edu/" target="_blank"><img src="img/Hacksu_Color.svg" id="hacksu"></a>
+          <a href="http://mlh.io" target="_blank"><img src="/img/mlh-logo.svg" alt="MLH" id="mlh-logo"></a>
+      </div>
+  </div>
 <script type="text/javascript">
     /**
      * Provides requestAnimationFrame in a cross browser way.
