--- a/views/application/page1.html
+++ b/views/application/page1.html
@@ -57,6 +57,7 @@
       <option value="M">medium</option>
       <option value="L">large</option>
       <option value="XL">x-large</option>
+      <option value="XXL">x-x-large</option>
     </select>
     <label>Your shirt size</label>
     <button ng-click="closeAll()"></button>
