Typo Fix, for real this time

--- a/views/home.html
+++ b/views/home.html
@@ -6,7 +6,7 @@
     </div>
     <div class="title-bar" ng-if="home.login">
         <h1>LOGIN</h1>
-        <a ng-click="home.login=false">Register</a> <span>|</span> <a ui-sref="recover">Reset Passoword</a>
+        <a ng-click="home.login=false">Register</a> <span>|</span> <a ui-sref="recover">Reset Password</a>
     </div>
     <div class="content">
         <div class="labeled-input">
