--- a/views/home.html
+++ b/views/home.html
@@ -116,72 +116,42 @@
                     <div class="small-12 columns">
                         <br>
                         <p>
-                            Interested in sponsoring KHE 2015? Take a look at our
+                            Interested in sponsoring KHE 2016? Take a look at our
                             <a target="_blank" href="/SponsorshipPacket.pdf">sponsorship packet</a> and <a href="mailto:staff@khe.io">contact us</a> (staff@khe.io).
                         </p>
                     </div>
                 </div>
                 <div class="row sponsor-row">
+                  <div class="small-4 columns text-center">
+                      <a href="http://www.mrisoftware.com/"><img src="/img/sponsors/mrisoftware.png"></a>
+                  </div>
                     <div class="small-4 columns text-center">
-                        <a href="http://knightfoundation.org/"> <img src="/img/sponsors/knight-foundation.png" /> </a>
+                        <a href="https://www.explorys.com/"><img src="/img/sponsors/explorys.png"></a>
                     </div>
                     <div class="small-4 columns text-center">
                         <a href="https://www.progressive.com/"> <img src="/img/sponsors/progressive.png" /> </a>
                     </div>
-                    <div class="small-4 columns text-center">
-                        <a href="https://www.americangreetings.com/"> <img src="/img/sponsors/americangreetings.png" /> </a>
-                    </div>
                 </div>
                 <div class="row sponsor-row">
-                    <div class="small-4 columns text-center">
-                        <a href="http://www.mimsoftware.com/"> <img src="/img/sponsors/mim.svg" /> </a>
-                    </div>
-                    <div class="small-4 columns text-center">
-                        <a href="http://www.smuckers.com/"> <img src="/img/sponsors/smuckers.png" /> </a>
-                    </div>
-                    <div class="small-4 columns text-center">
-                        <a href="https://www.explorys.com/"><img src="/img/sponsors/explorys.png"></a>
-                    </div>
+                  <div class="small-4 columns text-center">
+                      <a href="https://www.onbase.com/"><img src="/img/sponsors/hyland.png"></a>
+                  </div>
+                  <div class="small-4 columns text-center">
+                      <a href="https://www.americangreetings.com/"> <img src="/img/sponsors/americangreetings.png" /> </a>
+                  </div>
+                  <div class="small-4 columns text-center">
+                      <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
+                  </div>
                 </div>
                 <div class="row sponsor-row">
+                  <div class="small-4 columns text-center">
+                      <a href="https://www.covermymeds.com/main/"> <img src="/img/sponsors/covermymeds.png" /> </a>
+                  </div>
                     <div class="small-4 columns text-center">
-                        <a href="https://www.onbase.com/"><img src="/img/sponsors/hyland.png"></a>
-                    </div>
-                    <div class="small-4 columns text-center">
-                        <a href="http://www.rosetta.com/"> <img src="/img/sponsors/rosetta.png" /> </a>
-                    </div>
-                    <div class="small-4 columns text-center">
-                        <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
-                    </div>
-                </div>
-                <div class="row sponsor-row">
-                    <div class="small-4 columns text-center">
-                        <a href="http://www.marcusthomasllc.com/"> <img src="/img/sponsors/marcusthomas.png" /> </a>
+                        <a href="http://www.interchez.com/"> <img src="/img/sponsors/interchez.png" /> </a>
                     </div>
                     <div class="small-4 columns text-center">
-                        <a href="https://hurricanelabs.com/"> <img src="/img/sponsors/hurricane.png" /> </a>
-                    </div>
-                    <div class="small-4 columns text-center">
-                        <a href="http://www.flashstarts.com/"> <img src="/img/sponsors/flashstarts.png" /> </a>
-                    </div>
-                </div>
-                <div class="row sponsor-row">
-                    <div class="small-4 columns text-center">
-                        <a href="https://www.formfire.com"> <img src="/img/sponsors/formfire.png" /> </a>
-                    </div>
-                    <div class="small-4 columns text-center">
-                        <a href="http://www.myboogieboard.com/"> <img src="/img/sponsors/kdi.svg" /> </a>
-                    </div>
-                    <div class="small-4 columns text-center end">
-                        <a href="http://www.oeconnection.com/"> <img src="/img/sponsors/OEC.png" /> </a>
-                    </div>
-                </div>
-                <div class="row sponsor-row">
-                    <div class="small-4 columns text-center">
-                        <a href="https://www.mobiledefense.com/"> <img src="/img/sponsors/mobiledefense.png" /> </a>
-                    </div>
-                    <div class="small-4 columns text-center end">
-                        <a href="https://www.kent.edu/blackstonelaunchpad"> <img src="/img/sponsors/blackstone.svg" /> </a>
+                        <a href="https://www.vertical-knowledge.com/"> <img src="/img/sponsors/verticalknowledge.png" /> </a>
                     </div>
                 </div>
                 <div class="row">
