New Sponsor Logos

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -162,7 +162,7 @@ h1, h2, h3, h4, h5 {
 
 #mlh-logo {
 	position: relative;
-	height: 50px;
+	height: 60px;
 }
 
 #logo {
@@ -323,7 +323,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .light-section {
-	background-color: #D0D3D4;
+	background-color: white;
 	padding-top: 30px;
 	margin-bottom: 30px;
 }
@@ -338,7 +338,7 @@ h1, h2, h3, h4, h5 {
 
 
 .sponsor-row {
-  margin-top: 2rem;
+  margin-top: 2rem !important;
 	box-sizing: content-box;
 }
 
