--- a/views/home.html
+++ b/views/home.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="row sponsor-row">
                   <div class="small-4 columns text-center">
-                      <a href="http://www.mrisoftware.com/"><img src="/img/sponsors/mrisoftware.png"></a>
+                      <a href="http://www.mrisoftware.com/"><img src="/img/sponsors/mrisoftware.png" style="width:65%;" ></a>
                   </div>
                     <div class="small-4 columns text-center">
                         <a href="https://www.explorys.com/"><img src="/img/sponsors/explorys.png"></a>
@@ -148,10 +148,19 @@
                       <a href="https://www.covermymeds.com/main/"> <img src="/img/sponsors/covermymeds.png" /> </a>
                   </div>
                     <div class="small-4 columns text-center">
-                        <a href="http://www.interchez.com/"> <img src="/img/sponsors/interchez.png" /> </a>
+                        <a href="http://www.interchez.com/"> <img src="/img/sponsors/InterChez.png" /> </a>
                     </div>
                     <div class="small-4 columns text-center">
-                        <a href="https://www.vertical-knowledge.com/"> <img src="/img/sponsors/verticalknowledge.png" /> </a>
+                        <a href="https://www.vertical-knowledge.com/"> <img src="/img/sponsors/VerticalKnowledge.png"  style="width:50%;" /> </a>
+                    </div>
+                </div>
+                <div class="row sponsor-row">
+                    <div class="small-4 columns text-center">
+                        <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/Remesh.png"/> </a>
+                    </div>
+                    <div class="small-4 columns text-center">
+                    </div>
+                    <div class="small-4 columns text-center">
                     </div>
                 </div>
                 <div class="row">
@@ -341,3 +350,6 @@
         return true;
     }
 </script>
+
+
+<a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2017/events?utm_source=na-2017&utm_medium=TrustBadge&utm_campaign=na-2017&utm_content=gray" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2017/gray.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
