MLH Boilerplate Move

--- a/views/application/page3.html
+++ b/views/application/page3.html
@@ -13,11 +13,13 @@
     <input id="cb-conduct" type="checkbox" ng-model="application.conduct" >
     <label for="cb-conduct">I agree to the <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">MLH Code of Conduct</a></label>
     <input id="cb-demographic" type="checkbox" ng-model="application.demographic">
-    <label for="cb-demographic">We participate in Major League Hacking (MLH) as a MLH Member Event.
+    <label for="cb-demographic" style="float: none;">
+          We participate in Major League Hacking (MLH) as a MLH Member Event.
           You authorize us to share certain application/registration information for
           event administration, ranking, MLH administration, pre and post-event
           informational e-mails, and occasional messages about hackathons in line
-          with the <a href="https://mlh.io/privacy">MLH Privacy Policy</a>.</label>
+          with the <a href="https://mlh.io/privacy">MLH Privacy Policy</a>.
+    </label>
   </div>
 </article>
 <footer>
