Link to Right Site

--- a/views/home.html
+++ b/views/home.html
@@ -156,7 +156,7 @@
                 </div>
                 <div class="row sponsor-row">
                     <div class="small-4 columns text-center">
-                        <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/Remesh.png"/> </a>
+                        <a href="https://remesh.co/"> <img src="/img/sponsors/Remesh.png"/> </a>
                     </div>
                     <div class="small-4 columns text-center">
                     </div>
