--- a/views/home.html
+++ b/views/home.html
@@ -134,31 +134,32 @@
                 </div>
                 <div class="row sponsor-row">
                   <div class="small-4 columns text-center">
+                    <a href="http://www.smuckers.com/"> <img src="/img/sponsors/smuckers.png"/> </a>
+                  </div>
+                  <div class="small-4 columns text-center">
                       <a href="https://www.onbase.com/"><img src="/img/sponsors/hyland.png"></a>
                   </div>
                   <div class="small-4 columns text-center">
                       <a href="https://www.americangreetings.com/"> <img src="/img/sponsors/americangreetings.png" /> </a>
                   </div>
+                </div>
+                <div class="row sponsor-row">
                   <div class="small-4 columns text-center">
                       <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
                   </div>
-                </div>
-                <div class="row sponsor-row">
                   <div class="small-4 columns text-center">
                       <a href="https://www.covermymeds.com/main/"> <img src="/img/sponsors/covermymeds.png" /> </a>
                   </div>
-                    <div class="small-4 columns text-center">
-                        <a href="http://www.interchez.com/"> <img src="/img/sponsors/InterChez.png" /> </a>
-                    </div>
-                    <div class="small-4 columns text-center">
-                        <a href="https://www.vertical-knowledge.com/"> <img src="/img/sponsors/VerticalKnowledge.png"  style="width:50%;" /> </a>
-                    </div>
+                  <div class="small-4 columns text-center">
+                      <a href="http://www.interchez.com/"> <img src="/img/sponsors/InterChez.png" /> </a>
+                  </div>
                 </div>
                 <div class="row sponsor-row">
                     <div class="small-4 columns text-center">
-                        <a href="https://remesh.co/"> <img src="/img/sponsors/Remesh.png"/> </a>
+                        <a href="https://www.vertical-knowledge.com/"> <img src="/img/sponsors/VerticalKnowledge.png"  style="width:50%;" /> </a>
                     </div>
                     <div class="small-4 columns text-center">
+                        <a href="https://remesh.co/"> <img src="/img/sponsors/Remesh.png"/> </a>
                     </div>
                     <div class="small-4 columns text-center">
                     </div>
@@ -171,14 +172,17 @@
                     </div>
                 </div>
                 <div class="row sponsor-row">
-                    <div class="small-4 columns text-center">
+                    <div class="small-3 columns text-center">
                         <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" style="width:50%;" /> </a>
                     </div>
-                    <div class="small-4 columns text-center">
+                    <div class="small-3 columns text-center">
                         <a href="http://www.library.kent.edu/"> <img src="/img/sponsors/university-library.png" /> </a>
                     </div>
-                    <div class="small-4 columns text-center end">
+                    <div class="small-3 columns text-center end">
                         <a href="https://www.kent.edu/cs"> <img src="/img/sponsors/cs.png" /> </a>
+                    </div>
+                    <div class="small-3 columns text-center end">
+                        <a href="https://www.kent.edu/launchnet"> <img src="/img/sponsors/LaunchNET_KSU.png" /> </a>
                     </div>
                 </div>
             </div>
