--- a/views/home.html
+++ b/views/home.html
@@ -27,7 +27,7 @@
 
 <div class="home">
     <div class="row">
-        <div class="small-10 small-centered medium-10 small-offset-1 columns" id="logo">
+        <div class="small-10 small-centered small-offset-1 large-12 large-offset-0 columns" id="logo">
             <img src="img/blue_logo.svg" class="fade center show-for-medium-up" alt="Kent Hack Enough">
             <img src="img/shortLogo.svg" class="fade small-centered show-for-small-only" alt="Kent Hack Enough">
         </div>
@@ -293,7 +293,7 @@
      */
     var canvas, context, dt;
     var stroke = 4;
-    var periods = 3;
+    var periods = 4;
     init();
     animate();
 
