--- a/views/home.html
+++ b/views/home.html
@@ -32,7 +32,7 @@
         </div>
     </div>
   </div>
-  <canvas id="waves"></canvas>
+  <waves> </waves>
   <div class="text-center fade">
 
         <h2 id="date">October 7-9th, 2016</h2>
@@ -268,92 +268,6 @@
           <a href="http://mlh.io" target="_blank"><img src="/img/mlh-logo.svg" alt="MLH" id="mlh-logo"></a>
       </div>
   </div>
-<script type="text/javascript">
-    /**
-     * Provides requestAnimationFrame in a cross browser way.
-     * @author paulirish / http://paulirish.com/
-     */
-    if (!window.requestAnimationFrame) {
-        window.requestAnimationFrame = (function() {
-            return window.webkitRequestAnimationFrame ||
-                window.mozRequestAnimationFrame ||
-                window.oRequestAnimationFrame ||
-                window.msRequestAnimationFrame ||
-                function( /* function FrameRequestCallback */ callback, /* DOMElement Element */ element) {
-                    window.setTimeout(callback, 1000 / 60);
-                };
-        })();
-    }
-</script>
-<script type="text/javascript">
-    /* Wave Script
-     * Nicholas Crawford 2016
-     * Adapted from mr doob's code : http://mrdoob.com/lab/javascript/requestanimationframe/
-     */
-    var canvas, context, dt;
-    var stroke = 4;
-    var periods = 3;
-    init();
-    animate();
-
-    function init() {
-        canvas = document.getElementById('waves');
-        context = canvas.getContext('2d');
-        canvas.width = canvas.width * 4;
-        canvas.height = canvas.height * 4;
-        dt = 0;
-    }
-
-    function animate() {
-        dt = dt + 1;
-        if (!drawWave('#D21C5A', 9, 2, 0.62, true)) { //Check to see if the slowest wave (Pink) is done drawing
-            document.getElementById('logo').style.opacity = 1; //fade in logo
-            var fading_elements = document.getElementsByClassName('fade');
-            setTimeout(function() { //Fade in everything else
-                for (var i = 0; i < fading_elements.length; ++i) {
-                    fading_elements[i].style.opacity = '1';
-                }
-            }, 500);
-        }
-        else {
-            drawWave('#4D7ABD', 10, 8, 0.25, true) //Blue
-            drawWave('#F7961D', 11, 4, 0, true); //Orange
-            requestAnimationFrame(animate);
-        }
-    }
-    /*
-      Function for drawing a wave
-      Color - A string. Color of the line. Accepts 'rgb(255,255,255)'' or '#FFFFFF'
-      Speed - Speed that the line is drawn across the screen
-      Height - The height of half a period relative to the canvas height. '2' would make a curve that fills the entire canvas in one full period
-      offset - periods to offset by. Probably a decimal ex: '0.25'.
-      leftToRight [NOT READY YET]-  boolean. True will draw the line left to right. False: right to left
-    */
-    function drawWave(color, speed, height, offset, leftToRight) {
-        //Whoa math!
-        var prevX = leftToRight ? ((dt - 1) * speed) : (canvas.width - (dt - 1) * speed);
-        var prevY = Math.sin((periods * 2) * (prevX / canvas.width) * Math.PI) * (canvas.height - stroke) / height + canvas.height / 2;
-        var x = leftToRight ? (dt * speed) : (canvas.width - dt * speed);
-        var y = Math.sin((periods * 2) * (x / canvas.width) * Math.PI) * (canvas.height - stroke) / height + canvas.height / 2;
-
-        //offset
-        x = x - (offset * canvas.width / (periods / 2));
-        prevX = prevX - (offset * canvas.width / (periods / 2));
-        //return before drawing if beyond the width of the canvas
-        if (x > canvas.width) {
-            return false;
-        }
-        //Draw those sexy curves ;)
-        context.beginPath();
-        context.lineWidth = stroke;
-        context.strokeStyle = color;
-        context.moveTo(x, y);
-        context.lineTo(prevX, prevY);
-        context.closePath();
-        context.stroke();
-        return true;
-    }
-</script>
 
 
 <a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2017/events?utm_source=na-2017&utm_medium=TrustBadge&utm_campaign=na-2017&utm_content=gray" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2017/gray.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
