--- a/views/home.html
+++ b/views/home.html
@@ -32,7 +32,7 @@
         </div>
     </div>
   </div>
-  <waves> </waves>
+  <waves on-done="home.wavesDone()"> </waves>
   <div class="text-center fade">
 
         <h2 id="date">October 7-9th, 2016</h2>
