--- a/views/home.html
+++ b/views/home.html
@@ -64,6 +64,8 @@
 
 
     <div class="info-section fade">
+        <boombox></boombox>
+        <headphones></headphones>
         <div class="row">
             <div class="small-12 columns">
                 <h1>DESIGN. BUILD. PARTY.</h1>
@@ -173,16 +175,16 @@
                     </div>
                 </div>
                 <div class="row sponsor-row">
-                    <div class="small-6 columns text-center">
+                    <div class="small-6 medium-3 columns text-center">
                         <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" style="width:50%;" /> </a>
                     </div>
-                    <div class="small-6 columns text-center">
+                    <div class="small-6 medium-3 columns text-center">
                         <a href="http://www.library.kent.edu/"> <img src="/img/sponsors/university-library.png" /> </a>
                     </div>
-                    <div class="small-6 columns text-center end">
+                    <div class="small-6 medium-3 columns text-center end">
                         <a href="https://www.kent.edu/cs"> <img src="/img/sponsors/cs.png" /> </a>
                     </div>
-                    <div class="small-6 columns text-center end">
+                    <div class="small-6 medium-3 columns text-center end">
                         <a href="https://www.kent.edu/launchnet"> <img src="/img/sponsors/LaunchNET_KSU.png" /> </a>
                     </div>
                 </div>
@@ -192,6 +194,7 @@
 </div>
 
 <div class="row white fade">
+    
     <div class="small-12 columns">
       <div class="row">
         <div class="small-12 columns">
@@ -261,8 +264,11 @@
       </div>
     </div>
   </div>
+  
 </div>
+
 <div class="footer">
+    <img src="img/surroundsound.svg" id="surround-sound" class="show-for-large-up"></img>
       <div id='powered'>
           <h4>Powered by</h4>
           <a href="http://hacksu.cs.kent.edu/" target="_blank"><img src="img/Hacksu_Color.svg" id="hacksu"></a>
