--- a/sass/app.scss
+++ b/sass/app.scss
@@ -260,6 +260,11 @@ h1, h2, h3, h4, h5 {
 	margin-bottom: 0px;
 }
 
+.content table {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 
 .title-bar > * {
 	line-height: 50px;
