updates url when modal dismissed

--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,5 @@
 <div class="background" ng-click="home.person.clear()" ng-if="home.loginRegister && !home.user"> </div>
-<div class="background" ng-click="home.person.clear()" ng-if="home.paypal"> </div>
+<div class="background" ng-click="home.person.clear()" ng-if="home.paypal" ui-sref="home"> </div>
 <div class="prompt" id="login" ng-if="home.loginRegister && !home.user">
     <div class="title-bar" ng-if="!home.login">
         <h1>REGISTER</h1>
