--- a/views/live.html
+++ b/views/live.html
@@ -1,3 +1,7 @@
+<div class="background" ng-click="live.snapchat.hide()" ng-if="live.snapchat.visible"> </div>
+<div class="prompt" id="login" ng-if="live.snapchat.visible">
+</div>
+
 <div class="light-page">
   <header>
     <div class="row">
@@ -88,6 +92,8 @@
           <p><i class="fa fa-twitter fa-lg"></i> &nbsp;<a href="https://twitter.com/@kenthackenough">Twitter</a></p>
           <p><i class="fa fa-facebook fa-lg"></i> &nbsp;<a href="https://www.facebook.com/kenthackenough">Facebook</a></p>
           <p><i class="fa fa-instagram fa-lg"></i> &nbsp;<a href="https://instagram.com/kenthackenough/">Instagram</a></p>
+          <p><i class="fa  fa-snapchat-ghost fa-lg"></i> &nbsp;<a ng-click="live.snapchat.show()">Snapchat</a></p>
+
         </div>
       </div>
     </div>
