--- a/views/live.html
+++ b/views/live.html
@@ -1,5 +1,6 @@
 <div class="background" ng-click="live.snapchat.hide()" ng-if="live.snapchat.visible"> </div>
-<div class="prompt" id="login" ng-if="live.snapchat.visible">
+<div class="static-centered" id="login" ng-if="live.snapchat.visible">
+    <img src="/img/KHEsnapcode.png"/>
 </div>
 
 <div class="light-page">
