Adds new color scheme to live page. Removes Links section

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -25,7 +25,7 @@ $color-list: "lightBlue", "darkBlue", "teal", "orange", "pink", "black";
 }
 
 .pink {
-    color: $pink;
+    color: $pink !important;
 }
 
 .black {
