--- a/views/live.html
+++ b/views/live.html
@@ -1,6 +1,6 @@
-<div class="background" ng-click="live.snapchat.hide()" ng-if="live.snapchat.visible"> </div>
-<div class="static-centered" id="login" ng-if="live.snapchat.visible">
-    <img src="/img/KHEsnapcode.png"/>
+<div class="background snapcode-background" ng-click="live.snapchat.hide()" ng-show="live.snapchat.background"> </div>
+<div class="static-centered snapcode" ng-click="live.snapchat.hide()" ng-show="live.snapchat.visible" style="width: 320px;" >
+    <img src="/img/KHEsnapcode.png" style="width: 320px;"/>
 </div>
 
 <div class="light-page">
