--- a/sass/app.scss
+++ b/sass/app.scss
@@ -224,6 +224,27 @@ h1, h2, h3, h4, h5 {
 	#headphones, #boombox { display: block;}
 }
 
+.snapcode {
+	top: 75%;
+	transform: translate(50%, -50%);
+	-webkit-transition: top 1s, transform 1s;; /* Safari */
+	transition: top 1s, transform 1s;
+}
+
+.snapcode.ng-hide {
+	top: 0;
+	transform: translate(50%, -100%);
+}
+
+.snapcode-background {
+	-webkit-transition: opacity 0.75s; /* Safari */
+	transition: opacity 0.75s;
+}
+
+.snapcode-background.ng-hide {
+	opacity: 0.0;
+}
+
 .static-centered {
 	position: fixed;
 	top: 35%;
